# dettrace

./: .gitignore  CMakeLists.txt  LICENSE  README.backup.md  README.md  actual.jsonl
analysis/: decision_engine.py  divergence.cpp  invariants.cpp
artifacts/: control_actuator_saturation_trajectory.csv  control_delayed_sensor_trajectory.csv  control_timing_jitter_trajectory.csv  control_trajectory.csv  divergence_report.json
artifacts/benchmarks/: benchmark_summary.json  incident_fingerprint.json  metrics_summary.json  propagation_prediction.json  run_metrics.csv  similar_incidents.json
artifacts/history/: incident_20260412T054205Z.json  incident_20260412T054305Z.json  incident_20260412T054310Z.json  incident_20260412T054333Z.json  incident_20260412T054513Z.json  incident_20260412T054756Z.json  incident_20260412T165952Z.json
artifacts/reports/: cluster_summary.json  cross_incident_learning.md  delayed_dependency_causal_chain.md  delayed_dependency_divergence_report.json  delayed_dependency_incident_report.md  delayed_dependency_invariant_breaks.md  delayed_dependency_propagation_view.md  delayed_dependency_root_cause_report.json  duplicate_ack_causal_chain.md  duplicate_ack_divergence_report.json  duplicate_ack_incident_report.md  duplicate_ack_invariant_breaks.md  duplicate_ack_propagation_view.md  duplicate_ack_root_cause_report.json  incident_cards.md  incident_fingerprints.json  misordered_recovery_causal_chain.md  misordered_recovery_divergence_report.json  misordered_recovery_incident_report.md  misordered_recovery_invariant_breaks.md  misordered_recovery_propagation_view.md  misordered_recovery_root_cause_report.json  propagation_predictions.json  retry_storm_causal_chain.md  retry_storm_divergence_report.json  retry_storm_incident_report.md  retry_storm_propagation_view.md  retry_storm_root_cause_report.json  scenario_summary.md  stale_state_causal_chain.md  stale_state_divergence_report.json  stale_state_incident_report.md  stale_state_invariant_breaks.md  stale_state_propagation_view.md  stale_state_root_cause_report.json  timeout_chain_causal_chain.md  timeout_chain_divergence_report.json  timeout_chain_incident_report.md  timeout_chain_invariant_breaks.md  timeout_chain_propagation_view.md  (+1 more)
bench/: overhead.md
dettrace-swift/: Package.swift
dettrace_platform/: requirements.txt
dettrace_platform/app/: main.py
dettrace_platform/case_studies/: cascading_failure.json  dma_ordering_bug.json  gpio_interrupt_race.json  race_condition_bug.json  register_write_ordering_mismatch.json  retry_storm_meltdown.json  timer_missed_tick.json  uart_interrupt_nominal.json  uart_interrupt_stuck_irq.json
docs/: cli.md  deterministic-replay-blog.md
packs/: cascading_timeouts.jsonl  failover_edge.jsonl  misordered_recovery.jsonl  retry_storm.jsonl
replay/: replayer.cpp
reports/: control_actuator_saturation_report.json  control_actuator_saturation_timing_budget.json  control_delayed_sensor_report.json  control_healthy_report.json  control_loop_diagnostics_summary.json  control_loop_divergence_report.json  control_loop_known_bad_report.json  control_loop_known_good_report.json  control_scenario_comparison.json  control_timing_jitter_report.json  control_timing_jitter_timing_budget.json  distributed_incident_report.json  distributed_semantic_diff.json  divergence_report.json  divergence_report_swift.json  divergence_report_swift.md  replay_summary.md
samples/: otel_spans.jsonl
scripts/: benchmark_runs.sh  collect_metrics.py  find_similar_incidents.py  fingerprint_incident.py  generate_divergence_report.py  predict_propagation.py  run_control_loop_demo.sh  run_demo.sh  run_distributed_demo.sh  run_incident_forensics_demo.sh  run_incident_intelligence.sh  run_scenarios.sh  save_incident_history.py  serve_viewer.sh
src/: control_loop.cpp  control_loop_main.cpp  diff.cpp  distributed_main.cpp  distributed_trace.cpp  event.cpp  incident_forensics.cpp  incident_forensics_main.cpp  invariants.cpp  main.cpp  recorder.cpp  replay_guard.cpp  replayer.cpp  scheduler.cpp  trace_io.cpp
trace/: recorder.cpp  serializer.cpp
viewer/: app.js  benchmarks.html  benchmarks.js  index.html  scenarios.json  styles.css
(+77 files in other folders)
